modify mozilla demo to take pic example

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,13 @@
 <html>
 
   <head>
-    
+    <script data-main="js/main" src="bower_components/requirejs/require.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="style/groundfloor.css" />
   </head>
 
   <video id="video"></video>
   <button id="startbutton">Start chat</button>
+  <canvas id="canvas"></canvas>
+  <img src="assets/img/linkedin_profile.jpg" id="photo" alt="photo">
 
 </html>
