add a couple more TODOs

--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,7 @@
   <button id="startbutton">Start chat</button>
   <canvas id="canvas"></canvas>
   <img src="http://localhost:3000/img/linkedin_profile.jpg" id="photo" alt="photo">
+	<!-- todo: add video stream from server side -->
+	<!-- and button to start/stop video -->
 
 </html>
