--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,13 @@
 <html>
 
   <head>
-    <script data-main="js/main" src="bower_components/requirejs/require.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" href="style/groundfloor.css" />
+    <script data-main="../client/js/main" src="bower_components/requirejs/require.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="../client/style/groundfloor.css" />
   </head>
 
   <video id="video"></video>
   <button id="startbutton">Start chat</button>
   <canvas id="canvas"></canvas>
   <img src="http://localhost:3000/img/linkedin_profile.jpg" id="photo" alt="photo">
-	<!-- todo: add video stream from server side -->
-	<!-- and button to start/stop video -->
 
 </html>
