--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <video id="video"></video>
+  <input id="namebutton" type="text" placeholder="username"/>
   <button id="startbutton">Start chat</button>
   <canvas id="canvas"></canvas>
   <img src="http://localhost:3000/assets/img/linkedin_profile.jpg" id="photo" alt="photo">
