client-side build

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
 <html>
 
   <head>
-    <script data-main="../client/js/main" src="bower_components/requirejs/require.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" href="../client/style/groundfloor.css" />
+    <script data-main="js/main" src="bower_components/requirejs/require.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="style/groundfloor.css" />
   </head>
 
   <video id="video"></video>
