begin separating server-side config from client-side logic

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,8 @@
   <input id="namebutton" type="text" placeholder="username"/>
   <button id="startbutton">Start chat</button>
   <canvas id="canvas"></canvas>
-  <img src="http://localhost:3000/assets/img/linkedin_profile.jpg" id="photo" alt="photo">
+  <div id="server-content">
+    <!-- <img src="http://localhost:3000/assets/img/linkedin_profile.jpg" id="photo" alt="photo"> -->
+  </div>
 
 </html>
