--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,8 @@
 <html>
 
   <head>
+    <meta charset="utf-8">
+    <title>Webchat</title>
     <script data-main="js/main" src="bower_components/requirejs/require.js" type="text/javascript" charset="utf-8"></script>
     <link rel="stylesheet" href="style/groundfloor.css" />
   </head>
