--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style/groundfloor.css" />
   </head>
 
-  <video id="video"></video>
-  <input id="namebutton" type="text" placeholder="username"/>
-  <button id="startbutton">Start chat</button>
-  <canvas id="canvas"></canvas>
-  <div id="server-content">
-    <!-- <img src="http://localhost:3000/assets/img/linkedin_profile.jpg" id="photo" alt="photo"> -->
-  </div>
+  <body>
+    <video id="video"></video>
+    <input id="namebutton" type="text" placeholder="username"/>
+    <button id="startbutton">Start chat</button>
+    <canvas id="canvas"></canvas>
+    <div id="server-content">
+      <!-- <img src="http://localhost:3000/assets/img/linkedin_profile.jpg" id="photo" alt="photo"> -->
+    </div>
+  </body>
 
 </html>
