--- a/text-sand/server/peephole_guest.html
+++ b/text-sand/server/peephole_guest.html
@@ -4,8 +4,10 @@
 	</head>
 
 	<body>
+		<p> {{ guest_name }} is at the door.</p>
 		<form action="" method="post">
 			<button name="action_type" type="submit" value="exit">Leave</button>
+			<button name="action_type" type="submit" value="open">Open Door</button>
 		</form>
 	</body>
 
