--- a/text-sand/server/knocker_wait.html
+++ b/text-sand/server/knocker_wait.html
@@ -5,7 +5,7 @@
 
 	<body>
 		<p>Waiting on host's admission</p>
-		<form action="" method="put">
+		<form action="" method="post">
 			<button name="action_type" type="submit" value="leave">Leave</button>
 		</form>
 	</body>
