placeholder client-side chatroom script

--- a/text-sand/server/room.html
+++ b/text-sand/server/room.html
@@ -1,15 +1,16 @@
 <html>
 
-	<head>
-	</head>
+  <head>
+    <script data-main="assets/js/main-room" src="assets/bower_components/requirejs/require.js" type="text/javascript" charset="utf-8"></script>
+  </head>
 
-	<body>
-		<div id="chat-area">
-			<p>Chat area unimplemented</p>
-		</div>
-		<form action="" method="post">
-			<button name="action_type" type="submit" value="stop">End chat</button>
-		</form>
-	</body>
+  <body>
+    <div id="chat-area">
+      <p>Chat area unimplemented</p>
+    </div>
+    <form action="" method="post">
+      <button name="action_type" type="submit" value="stop">End chat</button>
+    </form>
+  </body>
 
 </html>
