initial working python text-chat example

--- a/text-sand/server/room.html
+++ b/text-sand/server/room.html
@@ -6,7 +6,8 @@
 
   <body>
     <div id="chat-area">
-      <p>Chat area unimplemented</p>
+      <p id="messages"><!--Messages go here --></p>
+      <input id="new-message" type="text" name="message"></input>
     </div>
     <form action="" method="post">
       <button name="action_type" type="submit" value="stop">End chat</button>
